Add Google tags

--- a/locations/ikoyi/index.html
+++ b/locations/ikoyi/index.html
@@ -31,6 +31,15 @@
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Service","name":"Drone Rental in Ikoyi","description":"Professional drone rental and luxury aerial photography in Ikoyi, Lagos. Old Ikoyi, Parkview Estate, and Bourdillon.","provider":{"@type":"LocalBusiness","name":"PanoptesDrones","url":"https://panoptesdrones.com","telephone":"+2341234567890"},"areaServed":{"@type":"Place","name":"Ikoyi, Lagos, Nigeria"},"serviceType":"Drone Rental"}
     </script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8MQENQDME0"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-8MQENQDME0');
+    </script>
 </head>
 
 <body>
