--- a/locations/surulere/index.html
+++ b/locations/surulere/index.html
@@ -32,6 +32,15 @@
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Service","name":"Drone Rental in Surulere & Lagos Mainland","description":"Affordable professional drone rental services across Surulere, Yaba, Gbagada, and the wider Lagos Mainland.","provider":{"@type":"LocalBusiness","name":"PanoptesDrones","url":"https://panoptesdrones.com","telephone":"+2341234567890"},"areaServed":[{"@type":"Place","name":"Surulere, Lagos, Nigeria"},{"@type":"Place","name":"Yaba, Lagos, Nigeria"},{"@type":"Place","name":"Gbagada, Lagos, Nigeria"}],"serviceType":"Drone Rental"}
     </script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8MQENQDME0"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-8MQENQDME0');
+    </script>
 </head>
 
 <body>
