--- a/locations/ikeja/index.html
+++ b/locations/ikeja/index.html
@@ -33,6 +33,15 @@
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Service","name":"Drone Rental in Ikeja","description":"Professional drone rental and aerial services in Ikeja, Lagos. GRA, Maryland, Alausa, and surrounding commercial areas.","provider":{"@type":"LocalBusiness","name":"PanoptesDrones","url":"https://panoptesdrones.com","telephone":"+2341234567890"},"areaServed":{"@type":"Place","name":"Ikeja, Lagos, Nigeria"},"serviceType":"Drone Rental"}
     </script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8MQENQDME0"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-8MQENQDME0');
+    </script>
 </head>
 
 <body>
