--- a/locations/lagos-island/index.html
+++ b/locations/lagos-island/index.html
@@ -32,6 +32,15 @@
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Service","name":"Drone Rental in Lagos Island","description":"Professional drone rental and commercial aerial services in Lagos Island. Marina, Broad Street, CMS, and the historic business district.","provider":{"@type":"LocalBusiness","name":"PanoptesDrones","url":"https://panoptesdrones.com","telephone":"+2341234567890"},"areaServed":{"@type":"Place","name":"Lagos Island, Lagos, Nigeria"},"serviceType":"Drone Rental"}
     </script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8MQENQDME0"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-8MQENQDME0');
+    </script>
 </head>
 
 <body>
