--- a/locations/victoria-island/index.html
+++ b/locations/victoria-island/index.html
@@ -41,6 +41,15 @@
         "serviceType": "Drone Rental"
     }
     </script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8MQENQDME0"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-8MQENQDME0');
+    </script>
 </head>
 
 <body>
